# autonomous-control

./: .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  pyproject.toml  run.py
autonomous_control/facet/: alignment_opt.py  alignment_opt_es.py  auto_6d.py  auto_emittance.py  auto_schottky.py  create_env.py  e_spread_opt.py  emittance_opt.py  env_utils.py  l0_phasing.py  laser_steering.py  optimization_utils.py  runner.py  tcav_phasing.py  two_bunch_boed_utils.py  utils.py
autonomous_control/tests/: test_automatic_alignment.py  test_automatic_emittance.py  test_automatic_tcav_phasing.py  test_automatic_workflow.py  test_emittance_optimization.py
facet/: alignment_opt.py  alignment_opt_es.py  auto_6d.py  auto_emittance.py  auto_schottky.py  create_env.py  e_spread_opt.py  emittance_opt.py  evaluate_two_bunch_boed.ipynb  evaluate_two_bunch_boed_env.ipynb  laser_steering.py  optimization_utils.py  runner.py  tcav_phasing.py  two_bunch_boed_experiment.ipynb  two_bunch_boed_utils.py  utils.py
facet/aboed/: full_param_posterior_weights.pt  posterior_sampling_traced_final_horizon_100.pt  posterior_sampling_traced_round_00_horizon_010.pt  posterior_sampling_traced_round_01_horizon_020.pt  posterior_sampling_traced_round_02_horizon_030.pt  posterior_sampling_traced_round_05_horizon_060.pt  posterior_sampling_traced_round_06_horizon_070.pt  posterior_sampling_traced_round_07_horizon_080.pt  posterior_sampling_traced_round_08_horizon_090.pt  posterior_sampling_weights.pt
facet/tests/: test_automatic_emittance.py  test_automatic_routines.py  test_automatic_workflow.py  (+1 more)
(+8 files in other folders)
